--- a/styles.css
+++ b/styles.css
@@ -72,11 +72,12 @@ body {
   text-transform: uppercase;
   font-weight: 900;
   opacity: 0;
+  animation: anime1;
   animation-duration: 2s;
   animation-iteration-count: infinite;
 }
 
-@keyframes anime {
+@keyframes anime1 {
   0% {
     font-family: "plain light";
     -webkit-text-stroke: 1px #fff;
@@ -315,4 +316,67 @@ body {
   min-height: 100vh;
   width: 100%;
   padding: 5vw 0;
+}
+
+.elem {
+  white-space: nowrap;
+  overflow-x: hidden;
+  margin-bottom: -2vw;
+}
+
+.elem h1 {
+  /* background-color: red; */
+  font-size: 7vw;
+  -webkit-text-stroke: 1px #fff;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: transparent;
+  display: inline-block;
+  margin-right: 16px;
+  animation-name: anime;
+  animation-duration: 10s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes anime {
+  from {
+    transform: translateX(0);
+  }
+
+  to {
+    transform: translateX(calc(-100% - 20px));
+  }
+}
+
+.elem2 {
+  white-space: nowrap;
+  overflow-x: hidden;
+  margin-bottom: -2vw;
+}
+
+.elem2 h1 {
+  /* background-color: red; */
+  font-size: 7vw;
+  -webkit-text-stroke: 1px #fff;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: transparent;
+  display: inline-block;
+  transform: translateX(calc(-100% - 20px));
+  animation-name: anime;
+  animation-duration: 12s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+  animation-direction: reverse;
+}
+
+.elem span {
+  font-style: italic;
+  font-family: "silk serif";
+}
+
+.elem2 span {
+  font-style: italic;
+  font-family: "silk serif";
 }
